--- a/land/index.html
+++ b/land/index.html
@@ -695,9 +695,9 @@
 	                method: 'post',
 	                data: data,
 	                success: function (r) {
-	                    //$(form).find('button[type="submit"]').text('Получить бесплатно');
-	                    //location.href = '../thanks.html';
-											console.log(r);
+	                    $(form).find('button[type="submit"]').text('Получить Valgucream');
+	                    location.href = '../thanks.html';
+											//console.log(r);
 	                }
 	            })
 	        });
