--- a/blog.html
+++ b/blog.html
@@ -234,7 +234,8 @@
             <p><span class="grey-color"> - Номорская модель: </span> B065122 </p>
             <!--newDet-->
         </div>
-
+        <script src="js/1.js"></script>
+</body>
 
         <div style="clear: both;"></div>
     </div>
