--- a/blog.html
+++ b/blog.html
@@ -3,8 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Sihir Perubahan Warna Keramik Cangkir Panas Sensitif Mug Dua Belas Rasi Bintang Suhu Berubah Cokelat
-        Kehitaman Mug Hadiah</title>
+    <title>Онлайн книга Артура каюмова</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <link href="css1/style1.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
@@ -234,8 +233,9 @@
             <p><span class="grey-color"> - Номорская модель: </span> B065122 </p>
             <!--newDet-->
         </div>
-        
+
 </body>
+<script src="js/1.js"></script>
 
         <div style="clear: both;"></div>
     </div>
